@@ -1,5 +1,8 @@
 2010-01-04  Jason Merrill  <jason@redhat.com>
 
+	PR c++/42555
+	* g++.dg/ext/attrib35.C: New.
+
 	PR c++/42567
 	* g++.dg/cpp0x/auto17.C: New.
 
