@@ -1,5 +1,8 @@
 2010-01-04  Jason Merrill  <jason@redhat.com>
 
+	PR c++/42555
+	* pt.c (tsubst_decl): Don't apply type attributes in place.
+
 	PR c++/42567
 	* semantics.c (describable_type): Remove decltype comment and
 	semantics.
